--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,8 @@ input {
   border-radius: 5px;
   background-color: #fff;
   border-bottom: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 5px;
 }
 
 button {
